--- a/postgres/docker-compose.yaml
+++ b/postgres/docker-compose.yaml
@@ -8,7 +8,7 @@ services:
     environment:
       POSTGRES_DB: postgres
       POSTGRES_USER: postgres
-      POSTGRES_PASSWORD: p8cti5y6u%mo4tRQZM # randomly generated, please change
+      POSTGRES_PASSWORD: "p8cti5y6u%mo4tRQZM" # randomly generated, please change
       PGDATA: /var/lib/postgresql/data
     volumes:
       - ./db_data:/var/lib/postgresql/data
@@ -20,7 +20,7 @@ services:
     restart: always
     environment:
       PGADMIN_DEFAULT_EMAIL: some_account@some_domain.org
-      PGADMIN_DEFAULT_PASSWORD: PnFM68M3$MXEBLJ7nVkr # randomly generated, please change
+      PGADMIN_DEFAULT_PASSWORD: "PnFM68M3$MXEBLJ7nVkr" # randomly generated, please change
       PGADMIN_LISTEN_PORT: 80
     ports:
       - "127.0.0.1:8080:80"
